fix(002): 整改代码评审 15 项发现(统一拦截层/熔断并发/异步健壮/安全卫生)
对 001 MVP 整库评审的 15 项发现(P0–P3)逐项修复,对外 MCP 行为零回归(FR-016/017)。

- P0(资源泄漏): AsyncTaskExecutor 提交失败回滚僵尸任务 + 槽配对收口至 BackendEntry(不泄漏,P0-1/P0-2)
- P1(契约/并发): CircuitBreaker 线程安全; STATELESS 异步前置拒绝; 熔断记录下沉 invoke(cancel 不计); initialize 双检锁(P1-1~P1-4)
- P2(健壮性): 退役宽限=backendTimeout + 可追踪调度器; DiagnosticRequest 容忍 null; TaskStore.get O(1); 全局跨 target 背压(动态 cap)(P2-1~P2-4)
- P3(卫生): Auth.toString 脱敏; 健康判定/JSON 序列化单一事实源; 配置严格解析(拒浮点/超界); 删死代码(P3-1~P3-5)

统一拦截层 BackendEntry(execute/admit/invoke/isHealthy)收口熔断/取还槽/分类;域异常(CircuitOpen/ConcurrencyLimit/StatelessAsync/BackendUnreachable/GlobalConcurrencyLimit)与 McpError/注册表解耦。

验证: ./mvnw verify 全绿(单测 182 + 真实后端 IT 20,共 202); claude -p 端到端冒烟(list-targets/jvm/watch)通过。
逐项映射见 docs/code-review/2026-06-21-002-remediation-completion-report.md。

Co-Authored-By: Claude <noreply@anthropic.com>